--- a/102_ranging_beacon_region/src/main/res/values/strings.xml
+++ b/102_ranging_beacon_region/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
 
-    <string name="app_name">Beacon Ranging Demo</string>
+    <string name="app_name">Beacon Monitor Demo</string>
     <string name="scan_ready">Bind Beacon Manager success.</string>
     <string name="scan_not_ready">Press button to enable Bluetooth</string>
     <string name="scan">Scan</string>
     <string name="enable_bluetooth">Enable Bluetooth</string>
-    <string name="bluetooth_enabled">Ranging beacon…</string>
+    <string name="bluetooth_enabled">Scanning beacon…</string>
     <string name="bluetooth_not_available">Bluetooth Not Available. Please use a real device.</string>
     <string name="stop">Stop</string>
 </resources>
